[package]
name = "packet-pilot"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.72"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib"]
